clusters/dagda/apps/media/plex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:1.43.4@sha256:1f6f97d76e7bdb013789e94c838f2d9133b01ee4b2d4194148e492c4e4f12d90 # {"$imagepolicy": "flux-system:plex"}
          readinessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 1300Mi
            limits:
              memory: 4Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
            - name: dri
              mountPath: /dev/dri
      volumes:
        - name: config
          hostPath:
            path: /mnt/k3s-data/appdata/plex
            type: Directory
        - name: media
          hostPath:
            path: /mnt/media
            type: Directory
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  selector:
    app: plex
  ports:
    - name: webui
      port: 32400
      targetPort: 32400
