clusters/dagda/apps/media/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: media
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - plex.aiectomy.xyz
  rules:
    - backendRefs:
        - name: plex
          port: 32400
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - qbittorrent.aiectomy.xyz
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
